--- a/frontend-react/index.html
+++ b/frontend-react/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Skyhub</title>
+  <style>
+
+    #logo {
+      border-radius: 50%;       
+      width: 200px; 
+      height: 200px; 
+    }
+  </style>
+</head>
+<body>
+  <div id="root">
+    <img id="logo" src="/images/About/SKYHUB.jpg" alt="Skyhub Logo">
+  </div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
