--- a/frontend-react/index.html
+++ b/frontend-react/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/Airplane.png" />
+    <!-- This icon we searched it from: https://icon-icons.com/icon/airplane/98957 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SkyHub Website</title>
   </head>
   <body>
     <div id="root"></div>
